Reply only on tapping username, and prevent horizontal scrolling

--- a/app/assets/stylesheets/partials/chat.css.scss
+++ b/app/assets/stylesheets/partials/chat.css.scss
@@ -61,6 +61,7 @@
     .chat-items {
       height: 100%;
       overflow-y: scroll;
+      overflow-x: hidden;
       // to bring back inertial scrolling on iOS
       -webkit-overflow-scrolling: touch;
 
